Fixed alignment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -72,7 +72,7 @@ html, body {
 .green {
   color: yellowgreen;
 }
- 
+
 .red {
   color: rgb(210, 7, 7);
 }
@@ -152,3 +152,5 @@ html, body {
   }
 
 .text-indent{padding-left: 15px;}
+
+#coc {@extend .container;}
